--- a/Source/Views/uPerfil.fmx
+++ b/Source/Views/uPerfil.fmx
@@ -4,6 +4,7 @@ object Perfil: TPerfil
   BorderStyle = None
   ClientHeight = 625
   ClientWidth = 299
+  Position = ScreenCenter
   FormFactor.Width = 320
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop]
