Fix: Muitas alteracoes

--- a/Source/Views/uAdicionarServicos.fmx
+++ b/Source/Views/uAdicionarServicos.fmx
@@ -15,5 +15,303 @@ object AdicionarServicos: TAdicionarServicos
     Size.Height = 625.000000000000000000
     Size.PlatformDefault = False
     Stroke.Kind = None
+    object LayoutCenter: TLayout
+      Align = Center
+      Size.Width = 287.000000000000000000
+      Size.Height = 603.000000000000000000
+      Size.PlatformDefault = False
+      TabOrder = 0
+      object LayoutInfoServicos: TLayout
+        Align = Top
+        Size.Width = 287.000000000000000000
+        Size.Height = 189.000000000000000000
+        Size.PlatformDefault = False
+        TabOrder = 0
+        object pnInfoServicos: TRectangle
+          Align = Client
+          Fill.Color = xFF1E1E1E
+          Size.Width = 287.000000000000000000
+          Size.Height = 189.000000000000000000
+          Size.PlatformDefault = False
+          Stroke.Kind = None
+          XRadius = 2.000000000000000000
+          YRadius = 2.000000000000000000
+          object LayoutDescriscao: TLayout
+            Align = Client
+            Size.Width = 287.000000000000000000
+            Size.Height = 89.000000000000000000
+            Size.PlatformDefault = False
+            TabOrder = 0
+            object LayoutDes: TLayout
+              Align = Center
+              Size.Width = 233.000000000000000000
+              Size.Height = 50.000000000000000000
+              Size.PlatformDefault = False
+              TabOrder = 0
+              object edtDescriscao: TMemo
+                Touch.InteractiveGestures = [Pan, LongTap, DoubleTap]
+                DataDetectorTypes = []
+                Align = Client
+                Size.Width = 233.000000000000000000
+                Size.Height = 50.000000000000000000
+                Size.PlatformDefault = False
+                TabOrder = 0
+                Viewport.Width = 229.000000000000000000
+                Viewport.Height = 46.000000000000000000
+              end
+            end
+            object LayoutLabelDescricao: TLayout
+              Align = Top
+              Size.Width = 287.000000000000000000
+              Size.Height = 20.000000000000000000
+              Size.PlatformDefault = False
+              TabOrder = 1
+              object LayoutLBDes: TLayout
+                Align = Center
+                Size.Width = 237.000000000000000000
+                Size.Height = 17.000000000000000000
+                Size.PlatformDefault = False
+                TabOrder = 0
+                object LBDescriscao: TLabel
+                  Align = Client
+                  StyledSettings = [Family, Size, Style]
+                  Size.Width = 237.000000000000000000
+                  Size.Height = 17.000000000000000000
+                  Size.PlatformDefault = False
+                  TextSettings.FontColor = claWhite
+                  Text = 'Descri'#231#227'o'
+                  TabOrder = 0
+                end
+              end
+            end
+          end
+          object LayoutProfissao: TLayout
+            Align = Top
+            Size.Width = 287.000000000000000000
+            Size.Height = 50.000000000000000000
+            Size.PlatformDefault = False
+            TabOrder = 1
+            object LayoutPro: TLayout
+              Align = Center
+              Size.Width = 233.000000000000000000
+              Size.Height = 22.000000000000000000
+              Size.PlatformDefault = False
+              TabOrder = 0
+              object edtProfissao: TEdit
+                Touch.InteractiveGestures = [LongTap, DoubleTap]
+                Align = Client
+                TabOrder = 0
+                Size.Width = 233.000000000000000000
+                Size.Height = 22.000000000000000000
+                Size.PlatformDefault = False
+              end
+            end
+            object LayoutLabelProfissao: TLayout
+              Align = Top
+              Size.Width = 287.000000000000000000
+              Size.Height = 20.000000000000000000
+              Size.PlatformDefault = False
+              TabOrder = 1
+              object LayoutLBPro: TLayout
+                Align = Center
+                Size.Width = 237.000000000000000000
+                Size.Height = 17.000000000000000000
+                Size.PlatformDefault = False
+                TabOrder = 0
+                object LBProfissao: TLabel
+                  Align = Client
+                  StyledSettings = [Family, Size, Style]
+                  Size.Width = 237.000000000000000000
+                  Size.Height = 17.000000000000000000
+                  Size.PlatformDefault = False
+                  TextSettings.FontColor = claWhite
+                  Text = 'Nome da profiss'#227'o'
+                  TabOrder = 0
+                end
+              end
+            end
+          end
+          object LayoutTelefone: TLayout
+            Align = Bottom
+            Position.Y = 139.000000000000000000
+            Size.Width = 287.000000000000000000
+            Size.Height = 50.000000000000000000
+            Size.PlatformDefault = False
+            TabOrder = 2
+            object LayoutTel: TLayout
+              Align = Center
+              Size.Width = 235.000000000000000000
+              Size.Height = 25.000000000000000000
+              Size.PlatformDefault = False
+              TabOrder = 0
+              object edtTelefone: TEdit
+                Touch.InteractiveGestures = [LongTap, DoubleTap]
+                Align = Client
+                TabOrder = 0
+                Size.Width = 235.000000000000000000
+                Size.Height = 25.000000000000000000
+                Size.PlatformDefault = False
+              end
+            end
+            object LayoutLabelTelefone: TLayout
+              Align = Top
+              Size.Width = 287.000000000000000000
+              Size.Height = 20.000000000000000000
+              Size.PlatformDefault = False
+              TabOrder = 1
+              object LayoutLBtelefone: TLayout
+                Align = Center
+                Size.Width = 237.000000000000000000
+                Size.Height = 17.000000000000000000
+                Size.PlatformDefault = False
+                TabOrder = 0
+                object LBTelefone: TLabel
+                  Align = Client
+                  StyledSettings = [Family, Size, Style]
+                  Size.Width = 237.000000000000000000
+                  Size.Height = 17.000000000000000000
+                  Size.PlatformDefault = False
+                  TextSettings.FontColor = claWhite
+                  Text = 'Telefone'
+                  TabOrder = 0
+                end
+              end
+            end
+          end
+        end
+      end
+      object LayoutValores: TLayout
+        Align = Top
+        Position.Y = 189.000000000000000000
+        Size.Width = 287.000000000000000000
+        Size.Height = 68.000000000000000000
+        Size.PlatformDefault = False
+        TabOrder = 1
+        object LayoutLBValores: TLayout
+          Align = Center
+          Size.Width = 161.000000000000000000
+          Size.Height = 50.000000000000000000
+          Size.PlatformDefault = False
+          TabOrder = 0
+          object LBValores: TLabel
+            Align = Client
+            StyledSettings = [Family, Style, FontColor]
+            Size.Width = 161.000000000000000000
+            Size.Height = 50.000000000000000000
+            Size.PlatformDefault = False
+            TextSettings.Font.Size = 26.000000000000000000
+            TextSettings.HorzAlign = Center
+            Text = 'Valores'
+            TabOrder = 0
+          end
+        end
+      end
+      object Layout1: TLayout
+        Position.X = 48.000000000000000000
+        Position.Y = 320.000000000000000000
+        TabOrder = 2
+      end
+      object Layout2: TLayout
+        Position.X = 40.000000000000000000
+        Position.Y = 400.000000000000000000
+        TabOrder = 3
+      end
+      object Layout3: TLayout
+        Position.X = 32.000000000000000000
+        Position.Y = 456.000000000000000000
+        TabOrder = 4
+      end
+      object Layout4: TLayout
+        Position.Y = 520.000000000000000000
+        TabOrder = 5
+      end
+      object Layout5: TLayout
+        Position.X = 120.000000000000000000
+        Position.Y = 552.000000000000000000
+        TabOrder = 6
+      end
+      object LayoutInfoValores: TLayout
+        Align = Top
+        Position.Y = 257.000000000000000000
+        Size.Width = 287.000000000000000000
+        Size.Height = 135.000000000000000000
+        Size.PlatformDefault = False
+        TabOrder = 7
+        object pnValores: TRectangle
+          Align = Client
+          Fill.Color = xFF1E1E1E
+          Size.Width = 287.000000000000000000
+          Size.Height = 135.000000000000000000
+          Size.PlatformDefault = False
+          Stroke.Kind = None
+          XRadius = 2.000000000000000000
+          YRadius = 2.000000000000000000
+          object LayoutPreencherValores: TLayout
+            Align = Top
+            Size.Width = 287.000000000000000000
+            Size.Height = 73.000000000000000000
+            Size.PlatformDefault = False
+            TabOrder = 0
+            object LayoutValorDesconto: TLayout
+              Align = Center
+              Size.Width = 262.000000000000000000
+              Size.Height = 50.000000000000000000
+              Size.PlatformDefault = False
+              TabOrder = 0
+              object LayoutDesconto: TLayout
+                Align = Right
+                Position.X = 143.000000000000000000
+                Size.Width = 119.000000000000000000
+                Size.Height = 50.000000000000000000
+                Size.PlatformDefault = False
+                TabOrder = 0
+              end
+              object LayoutValor: TLayout
+                Align = Left
+                Size.Width = 119.000000000000000000
+                Size.Height = 50.000000000000000000
+                Size.PlatformDefault = False
+                TabOrder = 1
+              end
+            end
+          end
+        end
+      end
+    end
+  end
+  object Rectangle3: TRectangle
+    Position.X = 176.000000000000000000
+    Position.Y = 544.000000000000000000
+    Size.Width = 50.000000000000000000
+    Size.Height = 50.000000000000000000
+    Size.PlatformDefault = False
+  end
+  object Rectangle4: TRectangle
+    Position.X = 120.000000000000000000
+    Position.Y = 488.000000000000000000
+    Size.Width = 50.000000000000000000
+    Size.Height = 50.000000000000000000
+    Size.PlatformDefault = False
+  end
+  object Rectangle5: TRectangle
+    Position.X = 240.000000000000000000
+    Position.Y = 496.000000000000000000
+    Size.Width = 50.000000000000000000
+    Size.Height = 50.000000000000000000
+    Size.PlatformDefault = False
+  end
+  object Rectangle6: TRectangle
+    Position.X = 216.000000000000000000
+    Position.Y = 448.000000000000000000
+    Size.Width = 50.000000000000000000
+    Size.Height = 50.000000000000000000
+    Size.PlatformDefault = False
+  end
+  object Rectangle7: TRectangle
+    Position.X = 216.000000000000000000
+    Position.Y = 536.000000000000000000
+    Size.Width = 50.000000000000000000
+    Size.Height = 50.000000000000000000
+    Size.PlatformDefault = False
   end
 end
