--- a/Source/Views/uAdicionarServicos.LgXhdpiPh.fmx
+++ b/Source/Views/uAdicionarServicos.LgXhdpiPh.fmx
@@ -2,7 +2,7 @@ inherited AdicionarServicos_LgXhdpiPh: TAdicionarServicos_LgXhdpiPh
   ClientHeight = 720
   ClientWidth = 450
   DesignerMasterStyle = 3
-  inherited Scroll: TScrollBox
+  inherited ScrollAdicionarServicos: TVertScrollBox
     Size.Width = 450.000000000000000000
     Size.Height = 720.000000000000000000
     Viewport.Width = 450.000000000000000000
